fixed buyer dark mode UI

--- a/src/app/Buyer/buyer-login/buyer-login.component.scss
+++ b/src/app/Buyer/buyer-login/buyer-login.component.scss
@@ -55,9 +55,9 @@ $pink:#F3797E;
         background-color: grey;
         color: #fff;
     }
-    .mat-raised-button.mat-primary {
-        background-color: #131417;
+    .mat-flat-button, .mat-raised-button, .mat-fab, .mat-mini-fab {
         color: #fff;
+        background-color: #131417;
     }
 }
 
@@ -78,35 +78,3 @@ $pink:#F3797E;
     }
 }
 
-@media (max-width:768px) {
-    .mobile_view {
-        display: block;
-    }
-    .blogin_heading {
-        display: none;
-    }
-    .card {
-        margin: 10vh 0;
-    }
-}
-
-@media (max-width:576px) {
-    .mat-form-field {
-        border-top: 1.9em !important;
-        padding: 10px;
-    }
-    #blogin_heading {
-        margin-top: 5%;
-        font-size: 260%;
-        font-weight: 550;
-        color: rgb(43, 43, 43);
-    }
-    .image {
-        margin-top: 3%;
-        height: 65vw;
-        width: 80vw;
-    }
-    .card {
-        margin: 7vh 0;
-    }
-}
